<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
             tools:context=".ui.TempConversionFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:padding="10dp">
            <TextView
                    android:text="Input Unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtinput_unit"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_unit_spinner"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:padding="10dp">
            <TextView
                    android:text="Output Unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/output_unit_spinner"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:padding="10dp">
            <TextView
                    android:text="Input Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/input_value_txt" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
            <TextView
                    android:text="Output Value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview4"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/output_value_txt"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
            <Button
                    android:text="Convert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/submit_btn"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>