...

    <Button
            android:text="Temperature Converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/temp_converter_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/vol_converter_btn"/>
    <Button
            android:text="Volume Converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/vol_converter_btn" android:layout_marginBottom="8dp"
...
