...
                android:layout_height="match_parent"
                android:padding="10dp">
            <TextView
                    android:text="Input Unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_input_vol"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
